--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,17 +1,18 @@
 .navbar {
-  background-color: white;
+  /* background-color: white;  */
   height: 80px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
   display: flex;
   justify-content: space-between;
   font-size: 14px;
   padding: 0 100px;
   transition: 0.5s;
   align-items: center;
+  width: 100%;
 }
 
 #dark .navbar {
-  background-color: rgb(32, 34, 44);
+  /* background-color: rgb(32, 34, 44); */
   color: white;
   transition: 0.5s;
 }
@@ -51,24 +52,25 @@
   color: white;
 }
 
-.navbar .navbar_buttons_login{
+.navbar .navbar_buttons_login {
   background-color: transparent;
   color: black;
   font-weight: bold;
 }
 
-#dark .navbar_buttons_login{
+#dark .navbar_buttons_login {
   color: white;
 }
 
-#dark .navbar .navbar_buttons_login:hover, .navbar .navbar_buttons_login:hover{
+#dark .navbar .navbar_buttons_login:hover,
+.navbar .navbar_buttons_login:hover {
   color: red;
 }
 
-.sign-up-button{
+.sign-up-button {
   margin: 20px 0 0 0;
 }
 
-.navbar .modal-container{
+.navbar .modal-container {
   width: 300px;
 }
