--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 634px;
     /* background-image: url(https://images.pexels.com/photos/4144144/pexels-photo-4144144.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2); */
-    background-image: url(https://images.pexels.com/photos/3769706/pexels-photo-3769706.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
+    background-image: url(https://img.freepik.com/premium-photo/chinese-food-chinese-traditional-cuisine-dishes-light-concrete-background-top-view-copy-space_233226-931.jpg?w=2000);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -11,18 +11,63 @@
 }
 
 .home-banner-content{
-    width: 500px;
+    width: 100%;
     padding: 0 100px;
     color: white;
+    position: absolute;
+}
+
+.home-banner-content button{
+    margin-top: 60px;
+}
+
+.home-banner-user-buttons{
+    width: 50%;
+}
+
+.home-banner-text{
+    width: 50%;
+}
+
+.home-banner-search-button, .home-banner-lucky-button{
+    height: 120px;
+    width: 350px;
+    background-color: white;
+    border-top-right-radius: 120px;
+    border-bottom-right-radius: 120px;
+    box-shadow: 0 0 8px rgb(0 0 0 / 25%);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(32, 34, 44);
+}
+
+.home-banner-search-button img, .home-banner-lucky-button img{
+    width: 50px;
+}
+
+.home-banner-search-button:hover, .home-banner-lucky-button:hover{
+    width: 400px;
+    transition: all 0.5s ease-in-out;
+}
+
+.home-banner-user-buttons{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+}
+
+.home-banner-filter{
+    width: 100%;
+    height: 634px;
+    background-color: black;
+    filter: opacity(0.23);
 }
 
 .home-banner-content h1{
     margin-bottom: 10px;
     font-size: 45px;
-}
-
-.home-banner-content p{
-    font-size: 18px;
 }
 
 .home-courses{
